force-app/main/default/objects/Employee__c/fields/Allocation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Start_Date__c</fullName>
    <label>Allocation Start Date</label>
    <type>DateTime</type>
</CustomField>