force-app/main/default/objects/Employee__c/fields/Employment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Employment_Mode__c</fullName>
    <label>Employment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contract Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>