force-app/main/default/objects/Employee__c/fields/IsAllocated__c.field-meta.xml
<CustomField>
    <fullName>IsAllocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllocated</label>
    <type>Checkbox</type>
</CustomField>