force-app/main/default/objects/Employee__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>CPQ Developer</fullName>
            </value>
            <value>
                <fullName>LWC Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce QA Tester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>