force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Experience__c</columns>
    <columns>Skills__c</columns>
    <columns>Joining_Date__c</columns>
    <columns>Employment_Mode__c</columns>
    <columns>Role__c</columns>
    <columns>Address__c</columns>
    <columns>IsAllocated__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>